--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -1,59 +1,95 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
- xmlns:th="http://www.thymeleaf.org">
- <head>
- <title>Shaurma Cloud</title>
- <style>
-    /* CSS для изменения цвета текста */
-    .validationError {
-        color: red; /* Красный цвет для ошибок */
-    }
+      xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Shaurma Cloud</title>
+    <style>
+        /* CSS для изменения цвета текста */
+        .validationError {
+            color: red; /* Красный цвет для ошибок */
+        }
 
-    .success {
-        color: green; /* Зеленый цвет для успешных сообщений */
-    }
-</style>
- </head>
- <body>
- <form method="POST" th:action="@{/orders}" th:object="${shaurmaOrder}">
- <h1>Order your shaurma creations!</h1>
- <img th:src="@{/img/Shava.jpg}"/>
- <h3>Your shaurmas in this order:</h3>
- <a th:href="@{/design}" id="another">Design another shaurma</a><br/>
- <ul>
- <li th:each="shaurma : ${shaurmaOrder.shaurma}">
- <span th:text="${shaurma.name}">shaurma name</span></li>
- </ul>
- <h3>Deliver my shaurma masterpieces to...</h3>
- <label for="deliveryName">Name: </label>
- <input type="text" th:field="*{deliveryName}"/>
- <br/>
- <label for="deliveryStreet">Street address: </label>
- <input type="text" th:field="*{deliveryStreet}"/>
- <br/>
- <label for="deliveryCity">City: </label>
- <input type="text" th:field="*{deliveryCity}"/>
- <br/>
- <label for="deliveryState">State: </label>
- <input type="text" th:field="*{deliveryState}"/>
- <br/>
- <label for="deliveryZip">Zip code: </label>
- <input type="text" th:field="*{deliveryZip}"/>
- <br/>
- <h3>Here’s how I’ll pay...</h3>
- <label for="ccNumber">Credit Card #: </label>
- <input type="text" th:field="*{ccNumber}"/>
- <br/>
- <label for="ccExpiration">Expiration: </label>
- <input type="text" th:field="*{ccExpiration}"/>
- <br/>
- <label for="ccCVV">CVV: </label>
+        .success {
+            color: green; /* Зеленый цвет для успешных сообщений */
+        }
+    </style>
+</head>
+<body>
+<form method="POST" th:action="@{/orders}" th:object="${shaurmaOrder}">
+    <h1>Order your shaurma creations!</h1>
+    <img th:src="@{/img/Shava.jpg}"/>
+    <h3>Your shaurmas in this order:</h3>
+    <a th:href="@{/design}" id="another">Design another shaurma</a><br/>
+    <ul>
+        <li th:each="shaurma : ${shaurmaOrder.shaurma}">
+            <span th:text="${shaurma.name}">shaurma name</span>
+        </li>
+    </ul>
+
+    
+
+    <h3>Deliver my shaurma masterpieces to...</h3>
+    
+    <label for="deliveryName">Name: </label>
+    <input type="text" th:field="*{deliveryName}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('deliveryName')}"
+          th:errors="*{deliveryName}">Name Error</span>
+    <br/>
+
+    <label for="deliveryStreet">Street address: </label>
+    <input type="text" th:field="*{deliveryStreet}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('deliveryStreet')}"
+          th:errors="*{deliveryStreet}">Street Error</span>
+    <br/>
+
+    <label for="deliveryCity">City: </label>
+    <input type="text" th:field="*{deliveryCity}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('deliveryCity')}"
+          th:errors="*{deliveryCity}">City Error</span>
+    <br/>
+
+    <label for="deliveryState">State: </label>
+    <input type="text" th:field="*{deliveryState}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('deliveryState')}"
+          th:errors="*{deliveryState}">State Error</span>
+    <br/>
+
+    <label for="deliveryZip">Zip code: </label>
+    <input type="text" th:field="*{deliveryZip}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('deliveryZip')}"
+          th:errors="*{deliveryZip}">Zip Error</span>
+    <br/>
+
+    <h3>Here's how I'll pay...</h3>
+
+    <label for="ccNumber">Credit Card #: </label>
+    <input type="text" th:field="*{ccNumber}"/>
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccNumber')}"
+          th:errors="*{ccNumber}">CC Num Error</span>
+    <br/>
+
+    <label for="ccExpiration">Expiration: </label>
+    <input type="text" th:field="*{ccExpiration}"/>
+    
+    <span class="validationError"
+          th:if="${#fields.hasErrors('ccExpiration')}"
+          th:errors="*{ccExpiration}">Expiration Error</span>
+    <br/>
+
+    <label for="ccCVV">CVV: </label>
     <input type="text" th:field="*{ccCVV}"/>
     <span class="validationError"
-        th:if="${#fields.hasErrors('ccNumber')}"
- th:errors="*{ccNumber}">CC Num Error</span>
- <br/>
- <input type="submit" value="Submit Order"/>
- </form>
- </body>
+          th:if="${#fields.hasErrors('ccCVV')}"
+          th:errors="*{ccCVV}">CVV Error</span>
+    <br/>
+
+    <input type="submit" value="Submit Order"/>
+</form>
+</body>
 </html>
